# real_estate_scrapers

./: .env.dev  .env.prod  .env.test  .flake8  .gitignore  .pylintrc  .riff.yaml  README.md  main.py  mypy.ini  pyproject.toml
src/: exceptions.py
src/models/: db_service.py  models.py
src/scrapers/: base_scraper.py  config.py  daft_scraper.py  data_parsers.py  url_fetcher.py
